src/styles/styles.css
/* Set defaults */
@import url('https://fonts.googleapis.com/css?family=Roboto');

body {
  margin: 0;
  font-family: 'Roboto', sans-serif;
  color: #293544;
}
a {
  text-decoration: none;
  color: black;
}
.row {
  margin: 0;
}
@import './components/shared/header.css';
.opacity75 {
  opacity: .75;
}

.welcomeCard {
  background: #3F51B5;
  padding: 25px 25px 50px 25px;
  color: white;
}
.welcomeCard_title {
  font-size: 24px;
  font-weight: normal;
  line-height: 36px;
  margin: 0 0 16px 0;
}
.welcomeCard_text {
  font-size: 14px;
  line-height: 20px;
  margin: 0 0 24px 0;
}
.closeIcon {
  background: none;
  border: none;
  outline: none;
}
.closeIcon img {
  color: white;
  height: 24px;
  width: 24px;
}
.closeIcon:hover {
  cursor: pointer;
}

